--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.simpleregistration.fragments.login.LoginFragment"
+        android:name="com.example.simpleregistration.LoginFragment"
         android:label="Login"
         tools:layout="@layout/fragment_login">
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.simpleregistration.fragments.register.RegisterFragment"
+        android:name="com.example.simpleregistration.RegisterFragment"
         android:label="Registration"
         tools:layout="@layout/fragment_register" />
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.simpleregistration.fragments.home.HomeFragment"
+        android:name="com.example.simpleregistration.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home" />
 </navigation>
