--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,28 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/signInFragment">
 
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.simpleregistration.LoginFragment"
-        android:label="Login"
-        tools:layout="@layout/fragment_login">
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
+        android:id="@+id/signInFragment"
+        android:name="com.example.simpleregistration.SingInFragment"
+        android:label="Sign in"
+        tools:layout="@layout/fragment_login" />
     <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.simpleregistration.RegisterFragment"
-        android:label="Registration"
+        android:id="@+id/registerFragmentEmailPass"
+        android:name="com.example.simpleregistration.SignUpFragmentEmailPass"
+        android:label="Sign up"
         tools:layout="@layout/fragment_register_email_pass" />
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/lessonFragment"
         android:name="com.example.simpleregistration.HomeFragment"
-        android:label="HomeFragment"
+        android:label="Language guide"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/registerFragmentFullName"
+        android:name="com.example.simpleregistration.SignUpFragmentFullName"
+        android:label="Sign up" />
 </navigation>
