add user model, authViewModel, authViewModelFactory, AuthRepository

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,6 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_sign_in" />
 
 </LinearLayout>
