--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    tools:context=".SingInFragment">
+    tools:context=".auth.signIn.SingInFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivLogo"
