--- a/app/src/main/res/layout/fragment_sign_up_email_pass.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email_pass.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    tools:context=".SignUpFragmentEmailPass">
+    tools:context=".auth.signUp.SignUpFragmentEmailPass">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivLogo"
