some refactore, add signUp with email with pass

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,6 @@
         tools:layout="@layout/fragment_giud" />
     <fragment
         android:id="@+id/signUpFragmentFullName"
-        android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentFullName"
+        android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentPersonalInfo"
         android:label="Sign up" />
 </navigation>
