add legendary 2 shrek picture, simple logic in signUp fragment

--- a/app/src/main/res/layout/fragment_sign_up_personal_info.xml
+++ b/app/src/main/res/layout/fragment_sign_up_personal_info.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp">
+    android:layout_marginEnd="20dp"
+    tools:context=".auth.signUp.SignUpFragmentPersonalInfo">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputLayoutName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Name"
         android:layout_marginTop="170dp"
+        android:hint="Name"
         android:scrollbarSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,9 +70,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Select you role"
+        android:text="Select you role. By default, the student"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/inputLayoutPatronymic" />
 
@@ -79,16 +80,7 @@
         android:id="@+id/cbIsTeacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:text="I'm teacher"
-        app:layout_constraintStart_toEndOf="@id/cbIsStudent"
-        app:layout_constraintTop_toBottomOf="@id/tvRoleHeader" />
-
-    <CheckBox
-        android:id="@+id/cbIsStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="I'm student"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvRoleHeader" />
 
