--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/signInFragment">
+    app:startDestination="@id/signUpFragmentPersonalInfo">
 
     <fragment
         android:id="@+id/signInFragment"
@@ -21,7 +21,8 @@
         android:label="Language guide"
         tools:layout="@layout/fragment_giud" />
     <fragment
-        android:id="@+id/signUpFragmentFullName"
+        android:id="@+id/signUpFragmentPersonalInfo"
+        tools:layout="@layout/fragment_sign_up_personal_info"
         android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentPersonalInfo"
         android:label="Sign up" />
 </navigation>
