--- a/app/src/main/res/layout/fragment_giud.xml
+++ b/app/src/main/res/layout/fragment_giud.xml
@@ -6,6 +6,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/shrek_toilet"/>
 
 </LinearLayout>
