--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,13 +16,18 @@
         android:label="Sign up"
         tools:layout="@layout/fragment_sign_up_email_pass" />
     <fragment
-        android:id="@+id/guidFragment"
-        android:name="com.example.simpleregistration.fragments.guid.GuidFragment"
-        android:label="Language guide"
-        tools:layout="@layout/fragment_giud" />
+        android:id="@+id/studentFragment"
+        android:name="com.example.simpleregistration.fragments.guid.StudentFragment"
+        android:label="Student "
+        tools:layout="@layout/fragment_student" />
     <fragment
         android:id="@+id/signUpFragmentPersonalInfo"
-        tools:layout="@layout/fragment_sign_up_personal_info"
         android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentPersonalInfo"
-        android:label="Sign up" />
+        android:label="Sign up"
+        tools:layout="@layout/fragment_sign_up_personal_info" />
+    <fragment
+        android:id="@+id/teacherFragment"
+        android:name="com.example.simpleregistration.fragments.guid.TeacherFragment"
+        android:label="Teacher"
+        tools:layout="@layout/fragment_teacher" />
 </navigation>
