--- a/app/src/main/res/layout/fragment_sign_up_personal_info.xml
+++ b/app/src/main/res/layout/fragment_sign_up_personal_info.xml
@@ -13,7 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/shrek_persinfo"
+        tools:src="@tools:sample/avatars"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
