--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/main_graph"
     app:startDestination="@id/signInFragment">
 
     <fragment
@@ -18,25 +18,31 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_signInFragment_to_tabsFragment"
+            app:destination="@id/tabsFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragmentEmailPass"
         android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentEmailPass"
         android:label="Sign up"
-        tools:layout="@layout/fragment_sign_up_email_pass" />
-    <fragment
-        android:id="@+id/studentFragment"
-        android:name="com.example.simpleregistration.fragments.student.StudentFragment"
-        android:label="Student "
-        tools:layout="@layout/fragment_student" />
+        tools:layout="@layout/fragment_sign_up_email_pass" >
+        <action
+            android:id="@+id/action_signUpFragmentEmailPass_to_signUpFragmentPersonalInfo"
+            app:destination="@id/signUpFragmentPersonalInfo" />
+    </fragment>
     <fragment
         android:id="@+id/signUpFragmentPersonalInfo"
         android:name="com.example.simpleregistration.auth.signUp.SignUpFragmentPersonalInfo"
         android:label="Sign up"
-        tools:layout="@layout/fragment_sign_up_personal_info" />
+        tools:layout="@layout/fragment_sign_up_personal_info" >
+        <action
+            android:id="@+id/action_signUpFragmentPersonalInfo_to_signInFragment"
+            app:destination="@id/signInFragment" />
+    </fragment>
     <fragment
-        android:id="@+id/teacherFragment"
-        android:name="com.example.simpleregistration.fragments.teacher.TeacherFragment"
-        android:label="Teacher"
-        tools:layout="@layout/fragment_teacher" />
+        android:id="@+id/tabsFragment"
+        tools:layout="@layout/fragment_tabs"
+        android:name="com.example.simpleregistration.fragments.TabsFragment"
+        android:label="TabsFragment" />
 </navigation>
