--- a/app/src/main/res/navigation/profile_graph.xml
+++ b/app/src/main/res/navigation/profile_graph.xml
@@ -11,7 +11,9 @@
         android:label="ProfileFragment" >
         <action
             android:id="@+id/action_profileFragment_to_main_graph"
-            app:destination="@id/main_graph" />
+            app:destination="@id/main_graph"
+            app:popUpTo="@id/main_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <include app:graph="@navigation/main_graph" />
 </navigation>
