Fixed a bug with navigation when logging out of the account

--- a/app/src/main/res/navigation/profile_graph.xml
+++ b/app/src/main/res/navigation/profile_graph.xml
@@ -8,12 +8,5 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.simpleregistration.fragments.profile.ProfileFragment"
-        android:label="ProfileFragment" >
-        <action
-            android:id="@+id/action_profileFragment_to_main_graph"
-            app:destination="@id/main_graph"
-            app:popUpTo="@id/main_graph"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <include app:graph="@navigation/main_graph" />
+        android:label="ProfileFragment" />
 </navigation>
