--- a/app/src/main/res/layout/guid_item.xml
+++ b/app/src/main/res/layout/guid_item.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="10dp"
     android:layout_marginEnd="20dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#F3F3F3">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivStartIcon"
