--- a/app/src/main/res/layout/guid_item.xml
+++ b/app/src/main/res/layout/guid_item.xml
@@ -12,8 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#F3F3F3">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivStartIcon"
@@ -37,7 +36,7 @@
             tools:text="Variables" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivBookIcon"
+            android:id="@+id/ivGuidIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
