--- a/app/src/main/res/layout/quiz_item.xml
+++ b/app/src/main/res/layout/quiz_item.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvGuidName"
+            android:id="@+id/tvQuizName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -34,7 +34,7 @@
             tools:text="Variables" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivBookIcon"
+            android:id="@+id/ivQuizIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
