--- a/app/src/main/res/navigation/quiz_graph.xml
+++ b/app/src/main/res/navigation/quiz_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/quizFragment"
-        android:name="com.example.simpleregistration.fragments.quiz.QuizFragment"
+        android:name="com.example.simpleregistration.fragments.quiz.screen.QuizListFragment"
         android:label="QuizFragment" />
 </navigation>
