added the correct display of fragment headers and implemented the logic of navigation backwards

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -46,5 +46,5 @@
         android:id="@+id/tabsFragment"
         tools:layout="@layout/fragment_tabs"
         android:name="com.example.simpleregistration.fragments.TabsFragment"
-        android:label="TabsFragment" />
+        android:label="Home" />
 </navigation>
