--- a/app/src/main/res/navigation/profile_graph.xml
+++ b/app/src/main/res/navigation/profile_graph.xml
@@ -8,5 +8,5 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.simpleregistration.fragments.profile.ProfileFragment"
-        android:label="ProfileFragment" />
+        android:label="Profile" />
 </navigation>
