--- a/app/src/main/res/navigation/guid_graph.xml
+++ b/app/src/main/res/navigation/guid_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/guidFragment"
         android:name="com.example.simpleregistration.fragments.guid.screen.GuidListFragment"
-        android:label="GuidFragment">
+        android:label="Guid list">
         <action
             android:id="@+id/action_guidFragment_to_guidFragment2"
             app:destination="@id/guidFragment2"
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/guidFragment2"
         android:name="com.example.simpleregistration.fragments.guid.screen.GuidFragment"
-        android:label="GuidFragment">
+        android:label="Guid">
         <argument
             android:name="Guid"
             app:argType="com.example.simpleregistration.fragments.model.Guid" />
