--- a/app/src/main/res/layout/fragment_quiz_description.xml
+++ b/app/src/main/res/layout/fragment_quiz_description.xml
@@ -6,53 +6,62 @@
     android:layout_height="match_parent"
     android:layout_margin="8dp">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/linearProgressBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textSize="22sp"
-        android:gravity="center"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearProgressBar"
         tools:text="What is the best programming language for android native development ?" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/rbAnswer_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Kotlin"/>
+            tools:text="Kotlin" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/rbAnswer_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Java"/>
+            tools:text="Java" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/rbAnswer_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Dart"/>
+            tools:text="Dart" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/rbAnswer_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Swift"/>
+            tools:text="Swift" />
     </RadioGroup>
 
     <com.google.android.material.button.MaterialButton
