--- a/app/src/main/res/layout/guid_item.xml
+++ b/app/src/main/res/layout/guid_item.xml
@@ -23,10 +23,11 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvGuidName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:textSize="16sp"
+            app:layout_constraintEnd_toStartOf="@id/ivGuidIcon"
             app:layout_constraintBottom_toBottomOf="@id/ivStartIcon"
             app:layout_constraintStart_toEndOf="@id/ivStartIcon"
             app:layout_constraintTop_toTopOf="@id/ivStartIcon"
