--- a/app/src/main/res/navigation/guid_graph.xml
+++ b/app/src/main/res/navigation/guid_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/guidFragment"
-        android:name="com.example.simpleregistration.fragments.guid.guid_list.GuidListFragment"
+        android:name="com.example.simpleregistration.fragments.guid.list.GuidListFragment"
         android:label="Guid list">
         <action
             android:id="@+id/action_guidFragment_to_guidFragment2"
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/guidFragment2"
-        android:name="com.example.simpleregistration.fragments.guid.guid_description.GuidDescriptionFragment"
+        android:name="com.example.simpleregistration.fragments.guid.description.GuidDescriptionFragment"
         android:label="Guid">
         <argument
             android:name="guid"
